packages/concerto-cto/test/cto/bad/self-extending-transaction.bad.cto
namespace com.acme@1.0.0

transaction Self_Extending extends Self_Extending {
  o String foo optional
}
